
2005-04-18 Manjula GHM <mmanjula@novell.com>
	* mb-parser.jay:
		Support expressions for Directives
2005-04-12 Satya Sudha K <ksathyasudha@novell.com>
	* ecore.cs :
		Fixed conversions from 'object' to double, float, decimal and long

2005-04-18 Manjula GHM <mmanjula@novell.com>
	* mb-parser.jay:
		Support Conditional Constant Directives

2005-04-13 Manjula GHM <mmanjula@novell.com>
	* expression.cs : To support  'Or' argument of AttributeTargets in AttributeUsage
2005-04-12 Satya Sudha K <ksathyasudha@novell.com>
	* statement.cs :
		Introduced a class 'StatementSequence', to translate a late-binding call to a block of statements
	* expression.cs :
		Support for late binding (Not complete yet. Some basic method invocations work as of now)
	
2005-04-06 Ritvik Mayank <mritvik@novell.com>
  	   by Sudharsan V <vsudharsan@novell.com>
	* class.cs: correction for reflecting the correct Line No. in the Error message	
2005-04-05 Ritvik Mayank <mritvik@novell.com>
  	   Patch Submitted by Sudharsan V <vsudharsan@novell.com>
	* mb-parser.jay : correction for reflecting the correct Line No. in the Error message	

2005-03-31 Manjula GHM <mmanjula@novell.com>
	*mb-tokenizer.cs:To fix make test failure
2005-03-31 Manjula GHM <mmanjula@novell.com>
	*mb-tokenizer.cs: Support declaration of decimal numbers with no digits before point like '.52' instead of '0.52'

2005-03-29 Manjula GHM <mmanjula@novell.com>
	*assign.cs: Disallow New Date assignment with types other than date and object type

2005-03-25:3 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* AssemblyInfo.cs: Small increment in the version number to publicize --codepage support

2005-03-25:2 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* genericparser.cs: another static Parse overload to support specifying encoding when parsing from a file.
	* driver.cs: obsoletes --tokenize, record currentEncoding for each source-file to be processed, call the new Parse overload